[package]
name = "damst"
version = "0.1.0"
authors = ["caoxiaodong <caoxiaodong@esightech.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
walkdir = "2"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }

